--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/shop-homepage.css" rel="stylesheet">
+  <link href="css/homepage.css" rel="stylesheet">
 
   <!-- Jquery-->
   <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
